syntax = "proto3";
package message;
option go_package = "serve/servicejili/jili_198_sl/message";

message Column {

  repeated int32 Col = 1;
}

message ColumnFloat {

  repeated double Col = 1;
}

message AwardData {

  int32 Symbol = 1;
  int32 Count = 2;
  double Win = 3;
  double Mult = 4;
  repeated int32 Pos_vec = 5;
}

message ComboStageInfo {

  repeated Column Combo_stage_symbol = 1;
  repeated ColumnFloat Combo_stage_mult = 2;
  double Combo_stage_win = 3;
  repeated AwardData Award_data_vec = 4;
  repeated Column Fill_symbols = 5;
  int32 Wild_pos = 6;
  repeated int32 Bomb_wild_pos = 7;
  repeated int32 Bombed_pos = 8;
  bool Max_flag = 9;
}

message RoundInfo {

  repeated ComboStageInfo Combo_stage_data = 1;
  double Round_win = 2;
  int32 Award_type_flag = 3;
  int32 Free_remain_round = 4;
  int32 Add_round = 5;
  bool Max_flag = 6;
  int32 Free_now_round = 7;
  int32 Free_total_round = 8;
  int32 Scatter_count = 9;
}

message SpinAck {

  repeated RoundInfo Round_queue = 1;
  double Free_total_win = 2;
  double Total_win = 3;
  string Show_index = 4;
  double Now_money = 5;
  int32 Ack_type = 6;
  double Bet = 7;
  double RT_p = 8;
}

message GameInfoData {

  bool Show_extra = 1;
  repeated double Mul = 2;
}